Shalliburton/caseflow 394 update scheduling appeal info (#16061)
Resolves [CASEFLOW-394](https://vajira.max.gov/browse/CASEFLOW-394)

### Description
Adds the appeal information to the schedule veteran page in a sticky side panel that scrolls the page with the user

### Acceptance Criteria
- [ ] Code compiles correctly

### Testing Plan

**General**
1. Shadow user `BVASYELLOW`: http://localhost:3000/test/users
2. Navigate to the schedule hearings: http://localhost:3000/hearings/schedule
3. Choose the 'St. Petersburg, FL' regional office and go to the 'AMA Veterans Waiting' tab
4. On the case details page, click the 'Schedule Veteran' action in the dropdown
5. Ensure that the appeal information is displayed correctly on the left
6. Ensure that you can still schedule the veteran successfully

**With Date of Death**
1. Follow the steps above to navigate to a veterans hearing
2. When you are on the case details page, open a rails console and run the following commands:
    ```
    appeal=Appeal.find_by(uuid: "{appeal_uuid_from_url}")
    appeal.veteran.update(date_of_death: Date.yesterday)
    appeal.update(veteran_is_not_claimant: true)
    ```
3. Reload the case details page for the changes to take effect
4. Click the 'Schedule Veteran' action in the dropdown
5. Ensure that the appeal information is displayed correctly on the left with the date of death
6. Ensure that you can still schedule the veteran successfully

### User Facing Changes
 - [x] Screenshots of UI changes added to PR & Original Issue

 BEFORE|AFTER
 ---|---
<img width="1804" alt="Screen Shot 2021-03-29 at 10 23 05 AM" src="https://user-images.githubusercontent.com/61989526/112875267-d5a88b00-9078-11eb-81b9-b8540ab94009.png">|<img width="1740" alt="Screen Shot 2021-03-29 at 10 22 01 AM" src="https://user-images.githubusercontent.com/61989526/112875288-db05d580-9078-11eb-99df-bc0c9826ade9.png">


### Code Documentation Updates
- [x] Add or update code comments at 

--- a/client/app/styles/hearings/_hearings.scss
+++ b/client/app/styles/hearings/_hearings.scss
@@ -340,6 +340,12 @@
   }
 }
 
+// Schedule Veteran Styles
+.schedule-veteran-page {
+  min-height: 680px;
+}
+
+// Time Slot Styles
 .time-slot-label {
   font-weight: bold;
 }
@@ -407,4 +413,39 @@
 
 .time-slot-button-toggle.usa-button {
   padding-left: 0;
+}
+
+// Appeal Information Styles
+.schedule-veteran-appeals-info {
+  width: 100%;
+  background-color: $caseflow-background;
+  border: 2px solid $color-gray-lighter;
+  border-radius: 2%;
+  padding: 25px 20px;
+  max-width: 300px;
+
+  pre {
+    white-space: normal;
+    word-wrap: break-word;
+    width: 200px;
+  }
+
+  a > div {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    width: 200px;
+  }
+}
+
+.usa-width-one-fourth.schedule-veteran-appeal-info-container {
+  margin-right: 30px;
+  width: 300px;
+  height: 400px;
+  position: sticky;
+  top: 15px;
+
+  h2 {
+    margin-bottom: 10px;
+  }
 }
