Updated test snapshots

--- a/client/app/styles/hearings/_hearings.scss
+++ b/client/app/styles/hearings/_hearings.scss
@@ -431,6 +431,10 @@
   font-size: 19px;
 }
 
+.no-hearings-label {
+  text-align: center;
+}
+
 // Appeal Information Styles
 .schedule-veteran-appeals-info {
   width: 100%;
