Updated based on design feedback

--- a/client/app/styles/hearings/_hearings.scss
+++ b/client/app/styles/hearings/_hearings.scss
@@ -353,7 +353,7 @@
   overflow-y: auto;
 
   label {
-    color: $color-primary;
+    color: #323a45;
     font-weight: 700;
     font-size: 19px;
     position: sticky;
