--- a/client/app/styles/hearings/_hearings.scss
+++ b/client/app/styles/hearings/_hearings.scss
@@ -359,7 +359,7 @@
     position: sticky;
     // Fixes strange behavior where the list text is slightly visible on scroll
     top: -1px;
-    padding-bottom: 10px;
+    padding-top: 10px;
     width: 100%;
     background-color: $color-white;
   }
