Added scroll container to the hearing days list (#16112)
* Added scroll container to the hearing days list

* Added media query for smaller screens on hearing days list

* Updated based on design feedback

* Fixed padding on hearing day label

* Updated snapshots

* Replaced class names for tests

* Changed placement of the tooltip

* Updated snapshots

* Removed hearing day list filter and fixed styling

* Updated AssignHearings component

* Updated snapshots

Co-authored-by: Stephen Halliburton <stephen.halliburton@va.gov>
Co-authored-by: Tomas Apodaca <Thomas.Apodaca@va.gov>

--- a/client/app/styles/hearings/_hearings.scss
+++ b/client/app/styles/hearings/_hearings.scss
@@ -1,3 +1,5 @@
+$cf-hearing-day-label-color: #323a45;
+
 .worksheet-header {
   .cf-push-right {
     padding-top: 25px;
@@ -343,6 +345,32 @@
 // Schedule Veteran Styles
 .schedule-veteran-page {
   min-height: 680px;
+}
+
+// Hearings Schedule Styles
+.hearing-day-list {
+  // Each item = 73px * 10 = 730px
+  max-height: 730px;
+  overflow: hidden;
+  overflow-y: auto;
+
+  label {
+    color: $cf-hearing-day-label-color;
+    font-weight: 700;
+    font-size: 19px;
+    position: sticky;
+    // Fixes strange behavior where the list text is slightly visible on scroll
+    top: -1px;
+    padding-top: 10px;
+    width: 100%;
+    background-color: $color-white;
+  }
+}
+
+@media screen and (min-width: 1224px) and (max-width: 1680px) {
+  .usa-width-three-fourths.assign-hearing-tabs {
+    width: 65%;
+  }
 }
 
 // Time Slot Styles
