--- a/app/views/queue/index.html.erb
+++ b/app/views/queue/index.html.erb
@@ -31,7 +31,8 @@
       editNodDate: FeatureToggle.enabled?(:edit_nod_date, user: current_user),
       fnod_badge: FeatureToggle.enabled?(:fnod_badge, user: current_user),
       fnod_banner: FeatureToggle.enabled?(:fnod_banner, user: current_user),
-      view_nod_date_updates: FeatureToggle.enabled?(:view_nod_date_updates, user: current_user)
+      view_nod_date_updates: FeatureToggle.enabled?(:view_nod_date_updates, user: current_user),
+      view_poa_refresh_button: FeatureToggle.enabled?(:can_view_poa_refresh_button, user: current_user)
     }
   }) %>
 <% end %>
